--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
 }
-
+/* Navigation bar */
 ul.topnav {
     list-style-type: none;
     margin: 0;
@@ -33,6 +33,79 @@ ul.topnav li a:hover:not(.active) {
 @media screen and (max-width: 600px) {
     ul.topnav li {float: none;}
 }
+
+/* Hero section - banner */
+
+#hero {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 80vh; 
+    justify-content: center;
+    align-items: center;
+    background-color: #f47c20; 
+    text-align: center;
+    padding: 0 1rem;
+  }
+  
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 800px;
+    width: 100%;
+    
+  }
+  
+  .hero-logo {
+    width: 100%;
+    height: auto;
+    max-width: 500px;
+  }
+  
+  .slogan {
+    margin-top: 0.5rem; 
+    color: rgb(252, 231, 5);
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+  }
+  
+  .slogan h3, .slogan h4 {
+    margin: 0.4rem 0;
+  }
+
+  .slogan h3 {
+    font-size: 2rem;
+  }
+  
+  .slogan h4 {
+    font-size: 1.2rem;
+    
+  }
+  
+  @media screen and (max-width: 768px) {
+    #hero {
+      height: auto;
+      padding: 2rem 1rem;
+    }
+  
+    .hero-logo {
+      max-width: 90%;
+    }
+
+    .slogan {
+        margin-top: 1rem;
+    }
+
+    .slogan h3 {
+        font-size: 1.4rem;
+    }
+
+    .slogan h4 {
+        font-size: 1rem;
+    }
+  
+  }
+
 
 
 
