--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -109,7 +109,9 @@ ul.topnav li a:hover:not(.active) {
 
   #projects {
     margin: 10px;
-  }
+
+}
+
   /* float columns side by side */
   .column {
     float: left;
@@ -134,6 +136,27 @@ ul.topnav li a:hover:not(.active) {
         margin-bottom: 20px;
     }
   }
+
+  .card-container {
+    background-color: #f47c20;
+  }
+
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(246, 76, 4, 0.5);
+    padding: 15px;
+    text-align: center;
+    background-color: #f8e805;
+    border-radius: 6px;
+    margin-bottom: 20px;
+  }
+
+  .subHead {
+    text-align: center;
+    }
+
+    #features {
+        margin: 10px;
+    }
 
 
 
